# CRMArena

./: .env.example  .gitattributes  .gitignore  AI_ETHICS.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-fixed.txt  requirements.txt  run_tasks.py  run_tasks.sh  run_tasks_crmarena.sh  run_tasks_crmarena_pro.sh  run_tasks_crmarena_pro_uv.sh  run_tasks_crmarena_uv.sh  setup.py
crm_sandbox/agents/: __init__.py  chat_agent.py  prompts.py  tool_call_agent.py  utils.py
crm_sandbox/data/: assets.py  create_schema_deps.py  create_tasks.py  dependencies.txt  schema.json  schema_with_dependencies.json  tasks.json  tasks_natural.json
crm_sandbox/data/crm_arena/: best_region_identification_queries.jsonl  case_routing_queries.jsonl  handle_time_queries.jsonl  knowledge_qa_queries.jsonl  named_entity_disambiguation_queries.jsonl  policy_violation_identification_queries.jsonl  seasonality_identification_queries.jsonl  top_issue_identification_queries.jsonl  transfer_time_queries.jsonl
crm_sandbox/env/: __init__.py  connect_sandbox.py  env.py  functions.py  users.py
results/shared/b2b/multi-turn/: results_gpt-4o-2024-11-20_react_activity_priority_interactive-True.json  results_gpt-4o-2024-11-20_react_best_region_identification_interactive-True.json  results_gpt-4o-2024-11-20_react_case_routing_interactive-True.json  results_gpt-4o-2024-11-20_react_confidential_company_knowledge_interactive-True.json  results_gpt-4o-2024-11-20_react_conversion_rate_comprehension_interactive-True.json  results_gpt-4o-2024-11-20_react_handle_time_interactive-True.json  results_gpt-4o-2024-11-20_react_internal_operation_data_interactive-True.json  results_gpt-4o-2024-11-20_react_invalid_config_interactive-True.json  results_gpt-4o-2024-11-20_react_knowledge_qa_interactive-True.json  results_gpt-4o-2024-11-20_react_lead_qualification_interactive-True.json  (+55 more)
test_functions/: functions.py  test.py
(+66 files in other folders)
